# feishu-repo-broadcast-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.override.example.yaml  compose.yaml  pyproject.toml
deploy/: Caddyfile.example  nginx.conf.example  nginx.feishu.zhibianai.com.conf.example
docs/: manual-live-test.md  operations.md
scripts/: dev_send_fixture.py  init_sqlite.py
secrets/: README.md
src/service/: __init__.py  __main__.py  config.py  logging.py  main.py
src/service/domain/: dedup.py  delivery.py  format_feishu.py  models.py  normalize.py  outbox.py  retry_policy.py
src/service/http/routes/: health.py  webhooks_codeup.py  webhooks_gitlab.py
src/service/infrastructure/: feishu_client.py  secrets.py  sqlite_store.py
src/service/providers/: __init__.py  codeup.py  gitlab.py
src/service/worker/: retry_loop.py
tests/: __init__.py  conftest.py  test_caddy_template.py  test_dedup_and_retry.py  test_dry_run_delivery.py  test_message_formatting.py  test_normalization.py  test_outbox_restart_recovery.py  test_secret_loading.py  test_webhook_endpoints.py
tests/fixtures/: codeup_push.json  gitlab_push.json
